--- a/cps_ipums.Rmd
+++ b/cps_ipums.Rmd
@@ -5,13 +5,23 @@ date: "10/22/2020"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+# Preperation
+
+```{r Load packages}
+library(dplyr, warn.conflicts = FALSE)
+library(tidyverse)
+library(ggplot2)
+library(plm)
+
+```
+
+```{r R Markdown setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Load data
+# Data loading
 
-```{r load ipums data}
+```{r load unemployement data - ipums CPS}
 #source: ipums
 library(ipumsr)
 
@@ -22,21 +32,61 @@ cps_ddi <- read_ipums_ddi(cps_ddi_file) # Contains metadata, nice to have as sep
 cps_data <- read_ipums_micro(cps_ddi_file, data_file = cps_data_file)
 ```
 
-```{r load cencus data}
-#source: census website
-industry_code <- read.csv("cps_monthly_data/2017-census-industry-classification-titles-and-code-list.csv")
-occupation_code<-read.csv("cps_monthly_data/2018-census-occupation-classification-titles-and-code-list.csv")
-geo_code <- read.csv("data/geocorr2018 -crosswalk.csv")
+
+```{r load unemploymenet data - EconomicTracker}
+#source: https://github.com/OpportunityInsights/EconomicTracker
+
+ui_data <- read.csv("data/UI Claims - County - Weekly.csv", stringsAsFactors = F)
+employ_data <- read.csv("data/Employment Combined - County - Daily.csv",  stringsAsFactors = F)
+
+
+ui_data$initclaims_count_regular<- as.numeric (ui_data$initclaims_count_regular)
+ui_data$initclaims_rate_regular <- as.numeric(ui_data$initclaims_rate_regular)
+
+str(unemploy_data)
+employ_data[, c(5:8)] <- apply(employ_data[, c(5:8)], 2, function(x) as.numeric(x))
+
+
+
 ```
 
 
-```{r load and clean Shelter-in-plance data}
+
+```{r CI data}
+
+ci_data <- read.csv("data/CI_cyber_use.csv")
+
+```
+
+```{r load cencus data & geography crosswalk file}
+#source: census website PS: USE THE NEW ONE 
+#industry_code <- read.csv("cps_monthly_data/2017-census-industry-classification-titles-and-code-list.csv")
+#occupation_code<-read.csv("cps_monthly_data/2018-census-occupation-classification-titles-and-code-list.csv")
+#geo_code <- read.csv("data/geocorr2018 -crosswalk.csv")
+
+#source: https://www.huduser.gov/portal/datasets/usps_crosswalk.html
+zip_county <- read.csv("data/ZIP_COUNTY_122019.csv")
+
+#source: https://data.nber.org/cbsa-msa-fips-ssa-county-crosswalk/2019/
+msa_county <- read.csv("data/COUNTY_METRO2019.CSV")
+
+
+# EconomicTrack
+geoid <- read.csv("data/GeoIDs - County.csv", stringsAsFactors = F)
+
+```
+
+
+```{r load state policy data and clean (ealier) Shelter-in-plance data}
+# source: EconomicTracker 
+
+state_policy  <- read.csv("data/Policy Milestones - State.csv", stringsAsFactors = T)
+
 #Source: https://www.finra.org/rules-guidance/key-topics/covid-19/shelter-in-place
 #Reference: https://www.nytimes.com/interactive/2020/us/coronavirus-stay-at-home-order.html
 shelterdate <- read.csv("data/shelter-in-place.csv")
 shelterdate$State <- str_replace_all(shelterdate$State, "[*]", "") #Remove * in state names
 
-shelterdate$State
 
 state_info<-data.frame(abb = state.abb, state = state.name)
 state_info[] <- lapply(state_info, as.character)
@@ -48,6 +98,11 @@ state_info[nrow(state_info) + 1,] = c("PR", "Puerto Rico")
 shelterdate <- merge(shelterdate,state_info, by.x = "State", by.y = "state", all.x = TRUE )
 shelterdate$Order.Date <- str_replace_all(shelterdate$Order.Date, "/2020", "") #Remove * in state names
 
+shelterdate <- shelterdate %>% separate("Order.Date", c("OrderMonth", "OrderDay"))
+
+shelterdate$OrderMonth <- as.integer(shelterdate$OrderMonth)
+shelterdate$OrderDay <- as.integer(shelterdate$OrderDay)
+
 #National Emergency Concerning: March 13 
 #Reference: https://www.whitehouse.gov/presidential-actions/proclamation-declaring-national-emergency-concerning-novel-coronavirus-disease-covid-19-outbreak/
 
@@ -55,30 +110,19 @@ shelterdate$Order.Date <- str_replace_all(shelterdate$Order.Date, "/2020", "") #
 ```
 
 
+
+```{r covid19-data}
+
+covid <- read.csv("data/COVID - County - Daily.csv", stringsAsFactors = F)
+```
+
 # Data transformation
 
-```{r}
-library(dplyr, warn.conflicts = FALSE)
-library(tidyverse)
-```
+```{r Othes}
+# State level
+cps_data_demo<-cps_data # data backup
+cps_data_demo$YearMonth <- with(cps_data_demo, sprintf("%d-%02d", YEAR, MONTH))
 
-
-```{r geography data summary}
-str(geo_code)
-unique(cps_data_demo$STATEFIP)
-unique(cps_data_demo$METAREA)
-unique(cps_data_demo$COUNTY)
-
-```
-
-```{r geography data clean - state}
-geo_code_state <- geo_code[c("state","stab")]
-geo_code_state <- geo_code_state[!duplicated(geo_code_state$state),]
-geo_code_state$state <- as.numeric(as.character(geo_code_state$state))
-
-cps_data_demo$state_fip <- as.numeric(as.character(cps_data_demo$STATEFIP))
-cps_data_demo <- merge(cps_data_demo, geo_code_state, by.x = "state_fip", by.y = "state", all.x = TRUE)
-cps_data_demo <- merge(cps_data_demo,shelterdate[,c('abb','Order.Date')], by.x = "stab", by.y = "abb", all.x = TRUE)
 ```
 
 
@@ -95,16 +139,92 @@ ipums_val_labels(cps_ddi, IND)#need to refer to documents
 table(cps_data_demo$EMPSTAT)
 ```
 
-```{r Other clean}
-# State level
-cps_data_demo<-cps_data
-cps_data_demo$YearMonth <- with(cps_data_demo, sprintf("%d-%02d", YEAR, MONTH))
+```{r geography data clean - state}
+# geo data summary
+str(geo_code)
+unique(cps_data_demo$STATEFIP)
+unique(cps_data_demo$METAREA)
+unique(cps_data_demo$COUNTY)
+
+#cps-state
+geo_code_state <- geo_code[c("state","stab")]
+geo_code_state <- geo_code_state[!duplicated(geo_code_state$state),]
+geo_code_state$state <- as.numeric(as.character(geo_code_state$state))
+
+cps_data_demo$state_fip <- as.numeric(as.character(cps_data_demo$STATEFIP))
+cps_data_demo <- merge(cps_data_demo, geo_code_state, by.x = "state_fip", by.y = "state", all.x = TRUE)
+cps_data_demo <- merge(cps_data_demo,shelterdate[,c('abb','Order.Date')], by.x = "stab", by.y = "abb", all.x = TRUE)
+
+#ZIP-county data 
+zip_county_use <- subset(zip_county, TOT_RATIO > 0.5 ) # Caveat
+
+#MSA_County data
+msa_county_use <- msa_county[,c(1,4,6)]
+msa_county_use <- msa_county_use[!duplicated(msa_county_use),]
+
+```
+
+
+```{r geography merge}
+str(ci_data)
+ci_data_key <- ci_data[, c("SITEID","ZIPCODE")]
+ci_data_key$ZIPCODE <- substr(ci_data[, c("SITEID","ZIPCODE")]$ZIPCODE,1,5)
+ci_data_key$ZIPCODE <- sub("^0+", "", ci_data_key$ZIPCODE)
+ci_data_key$ZIPCODE <- as.integer(ci_data_key$ZIPCODE)
+
+ci_data_key <- merge(ci_data_key, zip_county_use[, c("ZIP", "COUNTY")], by.x = "ZIPCODE", by.y = "ZIP", all.x = TRUE)
+ci_data_key <- merge(ci_data_key, msa_county_use, by.x = "COUNTY", by.y = "FIPS.County.Code",all.x = TRUE )
+
+#Merge
+ci_data_use <- merge(ci_data, ci_data_key, by = "SITEID",all.x = TRUE)
+
+```
+
+
+
+```{r Control variable}
+# Firm level 
+
+# Demographic
+
+# Maybe COVID? 
+
+```
+
+
+# Descriptive analyses
+
+```{r Unemployment insurance - Economic Tracker}
+ui_data %>% 
+  group_by(month) %>% 
+  summarise (avg_initclaims_county = mean(initclaims_count_regular, na.rm = T),
+             avg_unemploy_rate = mean(initclaims_rate_regular, na.rm = T)  ) %>% 
+  ggplot(mapping = aes(x = as.character(month), y =  avg_unemploy_rate, group = 1)) +
+  geom_line() +
+  ggtitle("Unmployment insurance claim rates ")+
+  theme(plot.title = element_text(hjust = 0.5))
+  
+
+
+employ_data %>% 
+  group_by(month) %>% 
+  summarise_at(c("emp_combined","emp_combined_inclow", "emp_combined_incmiddle", "emp_combined_inchigh"), mean, na.rm = TRUE) %>% 
+  ggplot(mapping = aes(x = as.character(month), group = 1)) +
+  geom_line( aes(y =  emp_combined), size = 1) + 
+  geom_line( aes(y =  emp_combined_inclow) , color ="#48CAE4"  , linetype="twodash", size = 1) +
+  geom_line( aes(y =  emp_combined_incmiddle), color = "#0096C7", linetype="twodash", size = 1) +
+  geom_line( aes(y =  emp_combined_inchigh), color = "#03045E", linetype="twodash", size = 1) +
+  ggtitle("Relative changes to employment rates (All, Lowincome, Middle income, High income)" ) +
+  theme(plot.title = element_text(hjust = 0.5))
+  
+  
+
 
 
 ```
 
 
-```{r Geographic units analyses}
+```{r Unemployment - CPS analyses}
 #county level 
 
 cps_data_demo %>% 
@@ -115,7 +235,7 @@ cps_data_demo %>%
          unemployement = sum(EMPSTAT== 21 | EMPSTAT == 22),
          unemployment_rate = unemployement/total_workforce)
 
-  
+# Met are level  
 cps_data_demo %>% 
   filter( YearMonth > "2019-10") %>% 
   group_by(YearMonth,METAREA) %>% 
@@ -123,7 +243,7 @@ cps_data_demo %>%
          total_workforce = sum(EMPSTAT<30 & EMPSTAT!=0),
          unemployement = sum(EMPSTAT== 21 | EMPSTAT == 22),
          unemployment_rate = unemployement/total_workforce)
-
+# State level
 
 cps_data_demo %>% 
   filter( YearMonth > "2019-10") %>% 
@@ -135,10 +255,22 @@ cps_data_demo %>%
 
 
 
-# 
+cps_data_demo %>% 
+  select(YearMonth,EMPSTAT,stab,Order.Date) %>% 
+  filter( YearMonth > "2019-10") %>% 
+  count(YearMonth,EMPSTAT,stab,Order.Date) %>% 
+  group_by(YearMonth,stab) %>% 
+  mutate(total = sum(n), 
+         total_workforce = sum(n[EMPSTAT<30 & EMPSTAT!=0]),
+         unemployement = sum(n[EMPSTAT== 21 | EMPSTAT == 22]),
+         unemployment_rate = unemployement/total_workforce,
+         stayathome = ifelse(is.na(Order.Date), 0,1)) 
 
 ```
+
+
 ```{r}
+
 cps_data_demo %>% 
   select(YearMonth,EMPSTAT,stab,Order.Date) %>% 
   filter( YearMonth > "2019-10") %>% 
@@ -149,13 +281,7 @@ cps_data_demo %>%
          unemployement = sum(n[EMPSTAT== 21 | EMPSTAT == 22]),
          unemployment_rate = unemployement/total_workforce,
          stayathome = ifelse(is.na(Order.Date), 0,1))
-```
 
-
-
-
-
-```{r}
 
 demo1 <- cps_data_demo %>% 
   select(YearMonth,EMPSTAT,stab,Order.Date) %>% 
@@ -168,18 +294,144 @@ demo1 <- cps_data_demo %>%
          unemployment_rate = unemployement/total_workforce,
          stayathome = ifelse(is.na(Order.Date), 0,1))
 
+```
 
-demo1 %>% filter(stab == "AK")  
+
+```{r CI-geographic analysis}
+ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,   SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(COUNTY) %>% 
+   summarise(number_sites = n(), 
+         employee = sum(EMPLE),
+         revenue = sum(REVEN),
+         sum = sum(cyber_sum, na.rm=T),
+         pc = sum(PCS,  na.rm=T),
+         it_budget = sum(IT_BUDGET,  na.rm=T),
+         hard_budget = sum(HARDWARE_BUDGET,  na.rm=T),
+         soft_budget = sum(SOFTWARE_BUDGET, na.rm=T),
+         service_budget = sum(SERVICES_BUDGET, na.rm=T))
+         
+```
+
+```{r CI - mean & median}
+ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,   SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(STATE) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), mean, na.rm = TRUE) %>% 
+  arrange(desc(SOFTWARE_BUDGET))
+
+
+
+ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(STATE) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), median, na.rm = TRUE) %>% 
+  arrange(desc(cyber_sum))
+
+
+ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,   SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(COUNTY) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), mean, na.rm = TRUE) %>% 
+  arrange(desc(SOFTWARE_BUDGET))
+
+
+ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(COUNTY) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), median, na.rm = TRUE) %>% 
+  arrange(desc(cyber_sum))
+  
 
 ```
 
+```{r }
+
+```
+
+# Regression Analysis 
+```{r create panel data}
+ui_county_mean <- ui_data %>% 
+  group_by(month, countyfips) %>% 
+  summarise (avg_initclaims_count = mean(initclaims_count_regular, na.rm = T),
+             avg_initclaims_rate = mean(initclaims_rate_regular, na.rm = T)  )
+  
+  
+
+
+employ_mean <- employ_data %>% 
+  group_by(month, countyfips) %>% 
+  summarise_at(c("emp_combined","emp_combined_inclow", "emp_combined_incmiddle", "emp_combined_inchigh"), mean, na.rm = TRUE) %>% 
+  filter(emp_combined != "NaN")
+
+#employ_mean1 <- employ_mean
+rm(employ_mean1)
+
+employ_mean1[,] <- employ_mean
+
+
+ci_county_mean <- ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET, SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(COUNTY) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), mean, na.rm = TRUE) %>% 
+  arrange(desc(SOFTWARE_BUDGET))
+
+hist(ci_county_mean$cyber_sum)
+
+ggplot(ci_county_mean, aes(x=cyber_sum, y = ..prop..)) +
+  geom_bar(stat="identity")
+
+ci_county_median <- ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+  group_by(COUNTY) %>% 
+  summarise_at(c("EMPLE","REVEN", "cyber_sum", "PCS", "IT_BUDGET", "HARDWARE_BUDGET", "SOFTWARE_BUDGET" , "SERVICES_BUDGET"), median, na.rm = TRUE) %>% 
+  arrange(desc(cyber_sum))
+
+# create mean panel
+
+
+mean_panel_x <- merge(ci_county_mean, geoid[, c("countyfips","statename", "stateabbrev", "county_pop2019")],
+                        by.x = "COUNTY", by.y = "countyfips", all.x = TRUE)
+
+mean_panel_y <- merge(employ_mean, ui_county_mean , by = c("countyfips","month") , all = T  )
+
+mean_panel <- merge(mean_panel_x, mean_panel_y, by.x = "COUNTY", by.y = "countyfips", all = TRUE )
+
+mean_panel <- merge(mean_panel, shelterdate[, c('abb','OrderMonth','OrderDay')], by.x = "stateabbrev", by.y = "abb", all = T)
+str(mean_panel)
+
+mean_panel <- mean_panel[c(2,13,1,3:12,14:21)] 
+
+
+mean_panel <- mean_panel %>% 
+  mutate(home = ifelse( (month < OrderMonth) | (is.na(OrderMonth)), 0 ,1),
+         mean_cyber = mean(cyber_sum,  na.rm = T),
+         mid_cyber = median(cyber_sum, na.rm = T)) 
+
+mean_panel <- mean_panel %>% 
+  mutate(high_cyber = ifelse(cyber_sum > mean_cyber, 1, 0))
+
+```
+
+```{r Regression}
+# fixed effect index
+str(mean_panel)
+attach(mean_panel)
+
+mean_panel <- mean_panel[order(COUNTY,month),]
+
+pdim(mean_panel)
+
+str(panel_use)
+
+panel_use <- mean_panel[which(!is.na(mean_panel$COUNTY) & !is.na(mean_panel$month) ),]
+panel_use2 <-mean_panel[,c("COUNTY","month", "avg_initclaims_rate","EMPLE", "REVEN", "PCS")]
+
+
+
+reg_monkey <- plm(avg_initclaims_rate~home*high_cyber, data= panel_use)
+
+summary(reg_monkey)
+
+```
 
 
 # Data visualization
 
 ```{r}
-library(ggplot2)
-
 ggplot(obs, aes(x = YearMonth, y = n, group  = 1)) +
   geom_line() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
