--- a/covid_cyber.Rmd
+++ b/covid_cyber.Rmd
@@ -13,6 +13,8 @@ library(tidyverse)
 library(ggplot2)
 library(plm)
 library(DT)
+library(R.utils)
+library(data.table)
 ```
 
 ```{r R Markdown setup, include=FALSE}
@@ -27,10 +29,12 @@ knitr::opts_chunk$set(echo = TRUE)
 library(ipumsr)
 
 # Change these filepaths to the filepaths of your downloaded extract
-cps_ddi_file <- "cps_00003.xml"
-cps_data_file <- "cps_00003.dat"
+cps_ddi_file <- "data/cps_00003.xml"
+cps_data_file <- "data/cps_00003.dat"
 cps_ddi <- read_ipums_ddi(cps_ddi_file) # Contains metadata, nice to have as separate object
 cps_data <- read_ipums_micro(cps_ddi_file, data_file = cps_data_file)
+
+ fread(file_path, select = col)
 ```
 
 ## Unemployement insurance claim data  & Employment data from EconomicTracker
@@ -46,15 +50,33 @@ ui_data$initclaims_rate_regular <- as.numeric(ui_data$initclaims_rate_regular)
 
 employ_data[, c(5:8)] <- apply(employ_data[, c(5:8)], 2, function(x) as.numeric(x))
 
-
-
 ```
 
 
 ## Cybersecurity investment data from CI database
 ```{r CI data, include=FALSE}
+ci_path <- readWindowsShortcut("data/CI_USA_2019.lnk")
+ci_path <- gsub("\\\\", "/", ci_path$pathname)
 
-ci_data <- read.csv("data/CI_cyber_use.csv")
+ci_cyber <- read.csv("data/CI_cyber_use.csv")
+ci_cyber <- subset(ci_cyber, select = c('SITEID','cyber_sum', 'PCS','IT_BUDGET', 'HARDWARE_BUDGET', 'SOFTWARE_BUDGET', 'SERVICES_BUDGET'))
+
+path <- paste(ci_path, '/SiteDescription.TXT', sep = '')
+col <-  c('SITEID', 'PRIMARY_DUNS_NUMBER', 'COMPANY', 'CITY','STATE','ZIPCODE','COUNTRY' ,'YEAR_EST', 'COUNTY_NAME', 'MSA','EMPLE','REVEN','SALESFORCE','MOBILE_WORKERS','MOBILE_INTL', 'IT_STAFF', 'PC_BUDGET', 'SICGRP', 'SICSUBGROUP')
+ci_site <- fread(path, select = col)
+
+path <- paste(ci_path, '/PresenceInstall.TXT', sep = '')
+col <-  c('SITEID', 'VPN_PRES', 'IDACCESS_SW_PRES', 'DBMS_PRES', 'DATAWAREHOUSE_SW_PRES', 'SECURITY_SW_PRES')
+ci_presence <- fread(path, select = col)
+ci_presence[ci_presence == "Yes"] <- 1
+ci_presence[ci_presence == ""] <- 0
+ci_presence <- as.data.frame(ci_presence)
+ci_presence[, 2:6] <- sapply(ci_presence[, 2:6], as.numeric )
+
+path <- paste(ci_path, '/SiteLevelEnterprise.TXT', sep = '')
+col <-  c('SITEID', 'ENT_ID', 'ENT_COMPANY', 'CORPHDQ', 'ENT_TYPE', 'ENT_EMPLE', 'ENT_REVEN', 'ENT_IT_EMPLE','ENT_SERVER','ENT_STORAGE' , 'ENT_INTERNET_USERS', 'ENT_SERVER_BUDGET', 'ENT_TERMINAL_BUDGET', 'ENT_STORAGE_BUDGET','ENT_COMM_BUDGET', 'ENT_SERVICES_BUDGET')
+ci_enterprise <-  fread(path, select = col)
+
 
 ```
 
@@ -120,7 +142,8 @@ covid <- read.csv("data/COVID - County - Daily.csv", stringsAsFactors = F)
 
 # Data transformation
 
-```{r Othes, include=FALSE}
+
+```{r Prep, include=FALSE}
 # State level
 cps_data_demo<-cps_data # data backup
 cps_data_demo$YearMonth <- with(cps_data_demo, sprintf("%d-%02d", YEAR, MONTH))
@@ -147,8 +170,7 @@ unique(cps_data_demo$METAREA)
 unique(cps_data_demo$COUNTY)
 ```
 
-```{r geography data clean - state, include=FALSE}
-
+```{r Geography data clean - state, include=FALSE}
 
 #cps-state
 geo_code_state <- geo_code[c("state","stab")]
@@ -171,9 +193,10 @@ msa_county_use <- msa_county_use[!duplicated(msa_county_use),]
 ```
 
 
-```{r ci geography merge, include=FALSE}
-ci_data_key <- ci_data[, c("SITEID","ZIPCODE")]
-ci_data_key$ZIPCODE <- substr(ci_data[, c("SITEID","ZIPCODE")]$ZIPCODE,1,5)
+```{r CI merge, include=FALSE}
+#Geo merge
+ci_data_key <- ci_site[, c("SITEID","ZIPCODE")]
+ci_data_key$ZIPCODE <- substr(ci_site[, c("SITEID","ZIPCODE")]$ZIPCODE,1,5)
 ci_data_key$ZIPCODE <- sub("^0+", "", ci_data_key$ZIPCODE)
 ci_data_key$ZIPCODE <- as.integer(ci_data_key$ZIPCODE)
 
@@ -181,7 +204,10 @@ ci_data_key <- merge(ci_data_key, zip_county_use[, c("ZIP", "COUNTY")], by.x = "
 ci_data_key <- merge(ci_data_key, msa_county_use, by.x = "COUNTY", by.y = "FIPS.County.Code",all.x = TRUE )
 
 #Merge
-ci_data_use <- merge(ci_data, ci_data_key, by = "SITEID",all.x = TRUE)
+ci_data_use <- merge(ci_site, ci_data_key[, -2], by = "SITEID",all.x = TRUE)
+ci_data_use <- merge(ci_data_use, ci_cyber, by = "SITEID",all.x = TRUE)
+ci_data_use <- merge(ci_data_use, ci_presence, by = "SITEID",all.x = TRUE)
+ci_data_use <- merge(ci_data_use, ci_enterprise, by = "SITEID",all.x = TRUE)
 
 ```
 
@@ -193,14 +219,21 @@ ci_data_use <- merge(ci_data, ci_data_key, by = "SITEID",all.x = TRUE)
 str(covid)
 covid[, c(5:12)] <- sapply(covid[, c(5:12)], as.numeric)
 
-covid_county <- covid %>% 
+covid_county <-  covid %>% 
   group_by(countyfips,month) %>% 
-  summarise(avg_case_rate = mean(case_rate, na.rm = T),
-            avg_death_rate = mean(death_rate, na.rm = T),
-            avg_new_case_rate = mean(new_case_rate, na.rm = T),
-            avg_new_death_rate = mean(new_death_rate, na.rm =T))
+  summarise(case_count = max(case_count, na.rm = T),
+            death_count = max(death_count, na.rm = T),
+            case_rate = max(case_rate, na.rm = T),
+            death_rate = max(death_rate, na.rm = T),
+            avg_new_case_count = mean(new_case_count, na.rm = T),
+            avg_new_death_rate = mean(new_death_count, nna.rm = T),
+            avg_new_case_rate = mean(new_case_count, na.rm = T),
+            avg_new_death_rate = mean(new_death_count, na.rm =T),
+             
+             )
 
 ```
+
 
 
 # Descriptive analyses
@@ -294,17 +327,20 @@ demo1 <- cps_data_demo %>%
 
 
 ```{r CI-geographic analysis, include=FALSE}
-ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA.Name, EMPLE, REVEN, cyber_sum,PCS, IT_BUDGET, HARDWARE_BUDGET,   SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
+str(ci_data_use)
+
+ci_data_use %>% select(SITEID, STATE, COUNTY,CBSA.Name, EMPLE, REVEN, MOBILE_WORKERS ,cyber_sum,VPN_PRES,IDACCESS_SW_PRES, DBMS_PRES, DATAWAREHOUSE_SW_PRES, SECURITY_SW_PRES, PCS, IT_BUDGET, HARDWARE_BUDGET, SOFTWARE_BUDGET,SERVICES_BUDGET) %>% 
   group_by(COUNTY) %>% 
    summarise(number_sites = n(), 
          employee = sum(EMPLE),
          revenue = sum(REVEN),
-         sum = sum(cyber_sum, na.rm=T),
+         cyber = sum(cyber_sum, na.rm=T),
          pc = sum(PCS,  na.rm=T),
          it_budget = sum(IT_BUDGET,  na.rm=T),
          hard_budget = sum(HARDWARE_BUDGET,  na.rm=T),
          soft_budget = sum(SOFTWARE_BUDGET, na.rm=T),
-         service_budget = sum(SERVICES_BUDGET, na.rm=T))
+         service_budget = sum(SERVICES_BUDGET, na.rm=T),
+         )
          
 ```
 
@@ -372,10 +408,23 @@ ci_county_median <- ci_data_use %>% select(SITEID, STATE, ZIPCODE.x, COUNTY,CBSA
 
 # create mean panel
 
+## Raw data for STATA 
+
+ci_raw <- merge(ci_data_use, geoid[, c("countyfips","statename", "stateabbrev", "county_pop2019")],
+                        by.x = "COUNTY", by.y = "countyfips", all.x = TRUE )
+write.csv(ci_raw, "data/output/ci_raw.csv")
+
+county_raw <- merge(employ_mean, ui_county_mean , by = c("countyfips","month"), all = T  )
+county_raw <- merge(county_raw, geoid[, c("countyfips","statename", "stateabbrev")], by = "countyfips", all.x = TRUE )
+county_raw <- merge(county_raw, shelterdate[, c('abb','OrderMonth','OrderDay')], by.x = "stateabbrev", by.y = "abb", all = T)
+county_raw <- merge(county_raw, covid_county, by = c('countyfips','month'), all = T)
+
+write.csv(county_raw, "data/output/county_raw.csv")
 
 mean_panel_x <- merge(ci_county_mean, geoid[, c("countyfips","statename", "stateabbrev", "county_pop2019")],
                         by.x = "COUNTY", by.y = "countyfips", all.x = TRUE)
 mean_panel_y <- merge(employ_mean, ui_county_mean , by = c("countyfips","month") , all = T  )
+
 
 mean_panel <- merge(mean_panel_x, mean_panel_y, by.x = "COUNTY", by.y = "countyfips", all = TRUE )
 
@@ -415,7 +464,7 @@ attach(mean_panel)
 mean_panel <- mean_panel[order(COUNTY,month),]
 panel_use <- mean_panel[which(!is.na(mean_panel$COUNTY) & !is.na(mean_panel$month) ),]
 panel_use2 <-mean_panel[,c("COUNTY","month", "avg_initclaims_rate","EMPLE", "REVEN", "PCS")]
-#write.csv(panel_use, "panel_use.csv")
+write.csv(panel_use, "panel_use.csv")
 
 
 
